@@ -1,3 +1,12 @@
+2008-05-28  Sebastian Dröge  <slomo@circular-chaos.org>
+
+	* gst/videomixer/videomixer.c: (gst_videomixer_reset),
+	(gst_videomixer_init), (gst_videomixer_query_duration),
+	(gst_videomixer_query_latency), (gst_videomixer_query),
+	(gst_videomixer_blend_buffers):
+	* gst/videomixer/videomixer.h:
+	Implement position (in time), duration and latency queries.
+
 2008-05-27  Edward Hervey  <edward.hervey@collabora.co.uk>
 
 	* gst/videomixer/videomixer.c: (gst_videomixer_reset),
